force-app/main/default/objects/Activity/fields/Account_Location__c.field-meta.xml
<CustomField>
    <fullName>Account_Location__c</fullName>
    <label>Account Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>