force-app/main/default/objects/Activity/fields/Check_in_Location_Difference__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Location_Difference__c</fullName>
    <formula>IF(AND(!ISBLANK(Account_Location__c),!ISBLANK(Account_Location__c)) , DISTANCE(Account_Location__c,Checkin_Location__c ,&apos;km&apos;), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-in Location Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>