force-app/main/default/objects/Activity/fields/Current_project_Sites__c.field-meta.xml
<CustomField>
    <fullName>Current_project_Sites__c</fullName>
    <label>Current project Sites</label>
    <type>TextArea</type>
</CustomField>