force-app/main/default/objects/Activity/fields/Current_Vendors_he_deals_with__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendors_he_deals_with__c</fullName>
    <label>Current Vendors he deals with</label>
    <type>TextArea</type>
</CustomField>