force-app/main/default/objects/Activity/fields/Last_purchase_from_us__c.field-meta.xml
<CustomField>
    <fullName>Last_purchase_from_us__c</fullName>
    <label>Last purchase from us</label>
    <type>TextArea</type>
</CustomField>