force-app/main/default/objects/Activity/fields/Mail_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Mail_Send_To__c</fullName>
    <label>Mail Send To</label>
    <type>TextArea</type>
</CustomField>