force-app/main/default/objects/Activity/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDC</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>