force-app/main/default/objects/Activity/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Meeting Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>