force-app/main/default/objects/Activity/fields/Minutes_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Meeting__c</fullName>
    <label>Minutes of Meeting</label>
    <type>TextArea</type>
</CustomField>