force-app/main/default/objects/Activity/fields/Minutes_of_Meeting_picklist__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Meeting_picklist__c</fullName>
    <label>Minutes of Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Purpose_of_Visit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>he is giving inquiry for</fullName>
            </value>
            <value>
                <fullName>Order follow up next day</fullName>
            </value>
            <value>
                <fullName>Order follow up next week</fullName>
            </value>
            <value>
                <fullName>Order confirmed today</fullName>
            </value>
            <value>
                <fullName>Order placed with other vendor</fullName>
            </value>
            <value>
                <fullName>Inquiry not finalized</fullName>
            </value>
            <value>
                <fullName>Order finalized but stock position not with us</fullName>
            </value>
            <value>
                <fullName>Order confirmed, dispatch pending due to to price issue</fullName>
            </value>
            <value>
                <fullName>Order confirmed, but payment for previous bills pending</fullName>
            </value>
            <value>
                <fullName>Their new project not started till now. If any requirement is there they will contact us</fullName>
            </value>
            <value>
                <fullName>Customer has regular vendor, need better rates to get customer in</fullName>
            </value>
            <value>
                <fullName>Order on hold, price difference with other suppliers</fullName>
            </value>
            <value>
                <fullName>payment confirmed today</fullName>
            </value>
            <value>
                <fullName>payment confirmed for tomorrow</fullName>
            </value>
            <value>
                <fullName>payment confirmed for next week</fullName>
            </value>
            <value>
                <fullName>payment postponed to</fullName>
            </value>
            <value>
                <fullName>Customer not available</fullName>
            </value>
            <value>
                <fullName>Material Damage</fullName>
            </value>
            <value>
                <fullName>Signature Difference in Cheques</fullName>
            </value>
            <value>
                <fullName>Cheque bounce issue</fullName>
            </value>
            <value>
                <fullName>Invoice Billing issue</fullName>
            </value>
            <value>
                <fullName>Delay in dipatch</fullName>
            </value>
            <value>
                <fullName>Material Dispatch Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>