force-app/main/default/objects/Activity/fields/Products_he_deals_with__c.field-meta.xml
<CustomField>
    <fullName>Products_he_deals_with__c</fullName>
    <label>Products he deals with</label>
    <type>TextArea</type>
</CustomField>