force-app/main/default/objects/Activity/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry in hand</fullName>
            </value>
            <value>
                <fullName>Payment Collection</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
            </value>
            <value>
                <fullName>Inquiry Follow up</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>