force-app/main/default/objects/Activity/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>