force-app/main/default/objects/Activity/fields/Related_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Related_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>