force-app/main/default/objects/Activity/fields/Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_To_ID__c</fullName>
    <formula>WhatId</formula>
    <label>Related To ID</label>
    <type>Text</type>
</CustomField>