force-app/main/default/objects/Activity/fields/Upcoming_Project_Sites__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Project_Sites__c</fullName>
    <label>Upcoming Project Sites</label>
    <type>TextArea</type>
</CustomField>