force-app/main/default/objects/Activity/fields/Visit_For__c.field-meta.xml
<CustomField>
    <fullName>Visit_For__c</fullName>
    <label>Visit For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Vacant Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>